<resources>
    <string name="web_url" translatable="false">www.callambulance.in</string>
    <string name="app_key" translatable="false">doctrz4callambulance</string>
    <string name="app_namak" translatable="false">mobile12</string>
    <string name="imagePath">/Nutrifi/Images/</string>
    <string name="webservice_download_picture" translatable="false">webservices/getUploadedImage/</string>
    <string name="API_KEY" translatable="false">AIzaSyD6smdy4UP_y2pkLOY2PYQ6raDihI7Pn3Y</string>
    <string name="server_api_key" translatable="false">AIzaSyD1P_J9UAjyG39gz1vvXKbZyjChvlOpwXo</string>
    <string name="permission_grant_msg">Please grant the permission required, without this the app will not be able to inform others in case of emergency</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_email_mobile">Email or Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password should be between 6 and 20 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_a_free_account">Get A Free Account !</string>
    <string name="auto_verifying">Auto Verifying OTP </string>
    <string name="enter_otp_manually">Enter OTP Manually</string>
    <string name="invalidEmailAddress">Invalid email address</string>
    <string name="emailMandatory">Email is mandatory</string>
    <string name="success">Success</string>
    <string name="emailNotAvailable">This email id is not available</string>
    <string name="regInternalServerError">Registration Status:  Internal Server Error</string>
    <string name="registeringProgress">Registering....</string>
    <string name="msg_enter_email">Enter email id</string>
    <string name="titleMobileNumber">Enter Mobile Number</string>
    <string name="sign_up">Create Account</string>
    <string name="enter_email_mobile">Please enter your email id or mobile number</string>
    <string name="error_enter_email_mobile">Please enter a valid email id or mobile number</string>
    <string name="offlineMode">Unable to connect.Please check your internet connection and try again</string>
    <string name="mobile_number_error_msg">Please enter a 10 digit valid mobile number</string>
    <string name="email_error_msg">Please enter a valid Email Id.</string>
    <string name="phone_validation_error">Please enter a valid 10 digit phone number</string>
    <string name="validate_patient_email_empty">Please enter email, it cannot be left blank</string>
    <string name="wait_msg">Please wait ..</string>
    <string name="loading_progress">Please wait, Loading...</string>
    <string name="duplicate_mobile_error">A user with this mobile number already exists in the system.Please use another mobile number to create a new user or retrieve your password by clicking on forgot password in the login screen</string>
    <string name="duplicate_email_error">A user with this email id already exists in the system.Please use another email id to create a new user or retrieve your password by clicking on forgot password in the login screen</string>
    <string name="accessDenied">Access Denied. Use Patient ID To Login</string>
    <string name="ioException">Unable to process your request.Please try again.</string>
    <string name="responseNull">Sorry,some error while getting response.Please try again</string>
    <string name="isd_india">+91-</string>
    <string name="server_error_msg">Internal server error.</string>
    <string name="networkError">Oops!! Something went wrong please try again</string>
    <string name="success_msg">Check the consumer mobile for one time password and instructions to install call ambulance application</string>
    <string name="title_activity_main">Call Ambulance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="name">Name</string>
    <string name="left_menu_list_item6">First Responder?</string>
    <string name="left_menu_list_item10">Report Hazard</string>
    <string name="title_activity_activity_select_patient_in_emergency">Select Patient</string>
    <string name="kill">Kill</string>
    <string name="select_patient_in_emergency_timer_text">Initiating Emergency For Self In </string>
    <string name="select_patient_in_emergency_help_txt">Will automatically raise for Self if not selected</string>
    <string name="title_activity_activity_emergency_type">Select Type Of Emergency</string>
    <string name="ins_date_format" translatable="false">yyyy-MM-dd hh:mm:ss</string>
    <string name="date_format1" translatable="false">EEE MMM dd hh:mm:ss zzz yyyy</string>
    <string name="date_format3" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="simple_date_format" translatable="false">yyyy-MM-dd</string>
    <string name="progress_dialog_loading_hospitals">Loading hospitals</string>
    <string name="font_typeface_sans_serif" translatable="false">sans-serif</string>
    <string name="font_typeface_sans_serif_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_typeface_sans_serif_medium" translatable="false">sans-serif-medium</string>
    <string name="font_typeface_sans_serif_light" translatable="false">sans-serif-light</string>
    <string name="font_typeface_sans_serif_thin" translatable="false">sans-serif-thin</string>
    <string name="OK">OK</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="title_activity_otpregister">OTP Registeration</string>
    <string name="getting_otp">Getting OTP  </string>
    <string name="failed_to_get_otp">Failed to detect OTP, please check your sms and enter the OTP.</string>
    <string name="error_otp">please check your sms and enter the OTP</string>
    <string name="submit">Submit</string>
    <string name="user_agreement_part1">By creating an account you confirm and accept our</string>
    <string name="user_agreement_part2"><a href="https://www.callambulance.in/home/tnc-callambulance/">Terms of Use </a> &amp; <a href="https://callambulance.in/home/privacy-m"> Privacy Policy</a></string>
    <string name="otp">OTP</string>
    <string name="label_initiating_emergency">Initiating Emergency</string>
    <string name="label_getting_location">Getting Location ...</string>
    <string name="label_alerting_emri">Alerting Ambulance Provider ...</string>
    <string name="label_calling_108">Calling</string>
    <string name="label_notifying_contacts"><![CDATA[Notifying Family & Friends ...]]></string>
    <string name="label_skip_call">Skip Call</string>
    <string name="label_add_bf">Add Bloody Friends</string>
    <string name="label_bloodbuddies">Bloody Friends</string>
    <string name="label_person_in_emergency">Divya Raju is in an Emergency</string>
    <string name="label_revoke_emergency">Revoke Emergency</string>
    <string name="dialog_exit_app_title_msg">Are you sure you want to logout ?</string>
    <string name="label_exit">exit</string>
    <string name="no_address_found">Address Not Found</string>
    <string name="updating_progress">Updating...</string>
    <string name="error_terms_condition">Please accept the terms and condition to proceed.</string>
    <string name="update_profile">Update Your Profile</string>
    <string name="title_profile_registration">Almost there, Please fill in the following</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Mobile Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update_password">Please update your password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_mismatch_password">Password mismatch, please type again.</string>
    <string name="invalid_credentials">Incorrect User Id &amp; Password combination, Please check and retry</string>
    <string name="action_switch_user">Switch Member</string>
    <string name="noInsuranceFound">No Insurances Found</string>
    <string name="noreports_found">Reports module enables you to store all your health records like Prescriptions, Discharge Summary, Insurance etc for your ready reference. To upload any of these please press the "+" button at the top of this screen.</string>
    <string name="noEhrFound">No emergency health record found for this user</string>
    <string name="phoneNumber">PhoneNumber: </string>
    <string name="select_language">Change Language</string>
    <string name="blood_request_success_message">Your Request Has Been Succesfully Sent To Your Bloody Friends, Your friend will be notified and donate blood for you </string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contacts">Care Team</string>
    <string name="address">Address</string>
    <string name="label_splash_screen_congrats">Congrats !</string>
    <string name="label_splash_screen_stay_safe">Now You Can Stay Safe\n With Call Ambulance ! </string>
    <string name="label_splash_screen_continue"><![CDATA[Continue]]></string>
    <string name="labe_emergency">Emergency</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_tab_profile">Profile</string>
    <string name="action_refresh">Refresh</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="action_select_member">Switch Member</string>
    <string name="action_change_pwd">Change Password</string>
    <string name="title_add_member">Add Member</string>
    <string name="done">Done!!!</string>
    <string name="title_activity_nearby">Nearby</string>
    <string name="title_activity_activity_web_view_vedioes">Videos</string>
    <string name="forwhom">For whom</string>
    <string name="noofunits">No of Units</string>
    <string name="message">Message</string>
    <string name="motmessage">Your motivational message</string>
    <string name="dor">Date of Requirement</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="purpose">Purpose</string>
    <string name="send">SEND</string>
    <string name="donar_hosp">Where should the donor come Ex- Prime Hosptial</string>
    <string name="hintsurgery">Ex- Heart operation</string>
    <string name="title_upload_reports">My Reports</string>
    <string name="title_activity_ambulance_providers_list">Nearby Ambulance</string>
    <string name="title_activity_activity_share">Share</string>
    <string name="server_busy_msg">Your support has been overwhelming. We appreciate your patience as we upgrade our infrastructure in next few hours to meet your demand</string>
    <string name="server_offline">Thank You \n for embracing our concept</string>
    <string name="close">Close</string>
    <string name="buy_accident_coverage_dialog_msg">Buy Accident Health Insurance \nCoverage upto ₹ 1 lakh*\n @ ₹ 200 per person</string>
    <string name="tncapply"><![CDATA[*Terms & Condtions Apply]]></string>
    <string name="buy_now">BUY NOW</string>
</resources>