<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="99"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changelanguage"
        android:orderInCategory="100"
        android:title="@string/select_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_member"
        android:orderInCategory="101"
        android:title="@string/title_add_member"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_member"
        android:orderInCategory="102"
        android:title="@string/action_select_member"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_pwd"
        android:orderInCategory="103"
        android:title="@string/action_change_pwd"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="105"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="106"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_menu_share"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title=""
        app:showAsAction="always" />
</menu>
