<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashScreenBg"
    tools:context="com.patientz.activity.ActivitySplashScreen">

    <TextView
        android:id="@+id/tv1"
        style="@style/tv_roboto_medium_white_normal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="26dp"
        android:text="@string/label_splash_screen_congrats"
        android:textSize="38sp"

        />

    <TextView
        style="@style/tv_roboto_light_white_normal"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:text="@string/label_splash_screen_stay_safe"
        android:textSize="26sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/splash_mobile_img" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@string/font_typeface_sans_serif_medium"
        android:text="@string/label_splash_screen_continue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@drawable/selector_white_red"


        />
</RelativeLayout>
