<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="16dp"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/invitation_cancel"
        android:tint="@color/black"
        android:layout_gravity="top|right"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/insurance_1"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_accident_coverage_dialog_msg"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="@string/font_typeface_sans_serif_medium"
        android:textStyle="italic"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tncapply"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/bt_add_accident_policy"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@drawable/background_submit_button"
        android:fontFamily="@string/font_typeface_sans_serif_medium"
        android:drawableTint="@color/harvard_crimpson"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/buy_now"/>
</LinearLayout>

